<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">

        <item
          android:id="@+id/nav_saved_proposals"
          android:icon="@drawable/ic_action_info"
          android:title="@string/saved_proposal" />



         <item
             android:id="@+id/nav_sold_policies"
             android:icon="@drawable/ic_action_info"
             android:title="@string/sold_policies" />



        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_action_info"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_phone_android"
            android:title="@string/contact_us" />



       <!-- <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/update_profile"/>-->


      <!--  <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />-->
    </group>



</menu>
