<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/form_background_color">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolback_with_back"/>

    <ScrollView
        android:id="@+id/Scroll_BelowLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10sp"
            android:padding="10sp"
            android:background="@color/white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10sp"
                android:textStyle="bold"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center|end"
                    android:gravity="center|end"
                    android:padding="5dp"
                    android:text="Principal Officer: "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/principal_officer"
                    android:layout_gravity="center|top"
                    android:gravity="center|start"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_address"
                android:layout_gravity="center|top"
                android:gravity="center|start"
                android:padding="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_location_on"
                android:drawablePadding="5sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+91 22 26820489 \n+91-8169972611 "
                android:layout_gravity="center|top"
                android:gravity="center|start"
                android:padding="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:textSize="14sp"
                android:autoLink="phone"
                android:drawableStart="@drawable/ic_phone_android"
                android:drawablePadding="5sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_email"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:padding="10sp"
                android:layout_marginBottom="5sp"
                android:textSize="14sp"
                android:autoLink="email"
                android:drawableStart="@drawable/ic_mail_outline"
                android:drawablePadding="5sp"
                android:textColor="@color/colorPrimaryBlue"/>


            <WebView
                android:id="@+id/Webview_AddressLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_margin="10sp"
                android:minHeight="250sp"/>



        </LinearLayout>


    </ScrollView>




</RelativeLayout>